--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ html(lang='en')
         meta(name='description', content='')
         meta(name='author', content='')
 
-        title Eyes Of The Fallen - Official WebPage 
+        title The Morning After - Official WebPage 
 
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
 
@@ -27,7 +27,7 @@ html(lang='en')
         // Navigation
         nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top
             .container.px-4.px-lg-5
-                a.navbar-brand(href='#page-top') Eyes Of The Fallen
+                a.navbar-brand(href='#page-top') The Morning After
                 button.navbar-toggler.navbar-toggler-right(type='button', data-bs-toggle='collapse', data-bs-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
                     | Menu
                     i.fas.fa-bars
@@ -46,7 +46,7 @@ html(lang='en')
             .container.px-4.px-lg-5.d-flex.h-100.align-items-center.justify-content-center
                 .d-flex.justify-content-center
                     .text-center
-                        h1.mx-auto.my-0.text-uppercase Eyes Of The Fallen
+                        h1.mx-auto.my-0.text-uppercase The Morning After
                         h2.text-white-50.mx-auto.mt-2.mb-5 a veri veri gud ban jas gud musik
                         a.btn.btn-primary(href='#about') Listen to Our Music
 
@@ -60,7 +60,6 @@ html(lang='en')
                             | josiko meteoriko
                             | alvariko meteoriko
                             | ignacios 
-                            | francisko franquiko 
                             |moi sexo durisimo
 
         // Projects
@@ -78,13 +77,7 @@ html(lang='en')
                 .row.gx-0.mb-5.mb-lg-0.justify-content-center
                     .col-lg-6
 
-                    .col-lg-6
-                        .bg-black.text-center.h-100.project
-                            .d-flex.h-100
-                                .project-text.w-100.my-auto.text-center.text-lg-left
-                                    h4.text-white 5
-                                    p.mb-0.text-white-50
-                                        | por el culo te la hinco jjaja
+
                 .row.gx-0.justify-content-center
                     .col-lg-6
         // Signup
@@ -94,16 +87,11 @@ html(lang='en')
                     .col-md-10.col-lg-8.mx-auto.text-center
 
         // Contact
+
+        //TODO: centrar y expandir la celda de mail
         section#contact-section.bg-black
             .container.px-4.px-lg-5
                 .row.gx-4.gx-lg-5
-                    .col-md-4.mb-3.mb-md-0
-                        .card.py-4.h-100
-                            .card-body.text-center
-                                i.fas.fa-map-marked-alt.text-primary.mb-2
-                                h4.text-uppercase.m-0 Address
-                                hr.my-4.mx-auto
-                                .small.text-black-50 cale farsa ompare
                     .col-md-4.mb-3.mb-md-0
                         .card.py-4.h-100
                             .card-body.text-center
@@ -111,26 +99,21 @@ html(lang='en')
                                 h4.text-uppercase.m-0 Email
                                 hr.my-4.mx-auto
                                 .small.text-black-50
-                                    a(href='#!') tusmuertos@tumadre
-                    .col-md-4.mb-3.mb-md-0
-                        .card.py-4.h-100
-                            .card-body.text-center
-                                i.fas.fa-mobile-alt.text-primary.mb-2
-                                h4.text-uppercase.m-0 aifon
-                                hr.my-4.mx-auto
-                                .small.text-black-50 1111111111111111
-                .social.d-flex.justify-content-center
+                                    a(href='#!') tmabandofficial@gmail.com
+                    
+                .social.d-flex.justify-content-center 
                     a.mx-2(href='#!')
                         i.fab.fa-twitter
                     a.mx-2(href='#!')
-                        i.fab.fa-facebook-f
+                        i.fab.fa-spotify
                     a.mx-2(href='#!')
-                        i.fab.fa-github
+                        i.fab.fa-instagram
+
 
         // Footer
         footer.footer.bg-black.small.text-center.text-white-50
             .container.px-4.px-lg-5
-                | Copyright &copy; Eyes Of The Fallen 2023
+                | Copyright &copy; The Morning After 2023
 
         // Bootstrap core JS
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js')
