--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -46,7 +46,7 @@ html(lang='en')
             .container.px-4.px-lg-5.d-flex.h-100.align-items-center.justify-content-center
                 .d-flex.justify-content-center
                     .text-center
-                        h1.mx-auto.my-0.text-uppercase The Morning After
+                        h1#bandTitle.mx-auto.my-0.text-uppercase The Morning After
                         h2.text-white-50.mx-auto.mt-2.mb-5 a veri veri gud ban jas gud musik
                         a.btn.btn-primary(href='#about') Listen to Our Music
 
@@ -88,26 +88,22 @@ html(lang='en')
 
         // Contact
 
-        //TODO: centrar y expandir la celda de mail
+
         section#contact-section.bg-black
             .container.px-4.px-lg-5
                 .row.gx-4.gx-lg-5
                     .col-md-4.mb-3.mb-md-0
-                        .card.py-4.h-100
-                            .card-body.text-center
-                                i.fas.fa-envelope.text-primary.mb-2
-                                h4.text-uppercase.m-0 Email
-                                hr.my-4.mx-auto
-                                .small.text-black-50
-                                    a(href='#!') tmabandofficial@gmail.com
+
                     
                 .social.d-flex.justify-content-center 
                     a.mx-2(href='#!')
                         i.fab.fa-twitter
                     a.mx-2(href='#!')
                         i.fab.fa-spotify
-                    a.mx-2(href='#!')
+                    a.mx-2(href='https://www.instagram.com/tmabandofficial/')
                         i.fab.fa-instagram
+                    a.mx-2(href='mailto:tmabandofficial@gmail.com')
+                        i.fab.fa-envelope
 
 
         // Footer
