--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -28,6 +28,8 @@ html(lang='en')
         nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top
             .container.px-4.px-lg-5
                 a.navbar-brand(href='#page-top') The Morning After
+                
+
                 button.navbar-toggler.navbar-toggler-right(type='button', data-bs-toggle='collapse', data-bs-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
                     | Menu
                     i.fas.fa-bars
@@ -96,10 +98,12 @@ html(lang='en')
 
                     
                 .social.d-flex.justify-content-center 
-                    a.mx-2(href='#!')
-                        i.fab.fa-twitter
+                    a.mx-2(href='https://soundcloud.com/tmaband')
+                        i.fab.fa-soundcloud
                     a.mx-2(href='#!')
                         i.fab.fa-spotify
+                    a.mx-2(href='#!')
+                        i.fab.fa-youtube
                     a.mx-2(href='https://www.instagram.com/tmabandofficial/')
                         i.fab.fa-instagram
                     a.mx-2(href='mailto:tmabandofficial@gmail.com')
