--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -13,7 +13,7 @@ html(lang='en')
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
 
         // Font Awesome icons (free version)
-        script(src='https://use.fontawesome.com/releases/v6.3.0/js/all.js', crossorigin='anonymous')
+        script(src='https://use.fontawesome.com/releases/v6.4.0/js/all.js', crossorigin='anonymous')
 
         // Google fonts
         link(href='https://fonts.googleapis.com/css?family=Varela+Round', rel='stylesheet')
@@ -43,31 +43,20 @@ html(lang='en')
                             a.nav-link(href='#contact-section') Contact
    
 
-        // Masthead
-        header.masthead
+        // Masthead - about
+        header.masthead#about
             .container.px-4.px-lg-5.d-flex.h-100.align-items-center.justify-content-center
                 .d-flex.justify-content-center
                     .text-center
-                        h1#bandTitle.mx-auto.my-0.text-uppercase The Morning After
-                        h2.text-white-50.mx-auto.mt-2.mb-5 a veri veri gud ban jas gud musik
-                        a.btn.btn-primary(href='#about') Listen to Our Music
-
-        // About
-        section#about.about-section.text-center
-            .container.px-4.px-lg-5
-                .row.gx-4.gx-lg-5.justify-content-center
-                    .col-lg-8
-                        h2.text-white.mb-4 Formed by
-                        p.text-white-50
-                            | josiko meteoriko
-                            | alvariko meteoriko
-                            | ignacios 
-                            |moi sexo durisimo
+                        p.text-white-50.mx-auto.mt-1.mb-4 Prepare for the aftermath. Brace yourself for The Morning After.
+                        h2.text-white-50.mx-auto.mt-1.mb-1 /////////////////////// 
+                        p.text-white-50.mx-auto.mt-1.mb-1 amidst the relentless fires of modern metal, The Morning After emerges as a force to be reckoned with, harnessing the power and intensity of the genre to deliver a cataclysmic auditory experience. With a sound that resonates in the darkest corners of the soul, this unyielding metal band draws inspiration from the chaotic aftermath of a tumultuous night, capturing the raw emotions that linger as dawn breaks. by their indomitable frontman, Godbiz whose thunderous vocals exude both ferocity and vulnerability, The Morning After commands the stage with an electrifying presence. Their razor-sharp guitar riffs by Keroxx slice through the air, intertwining with bone-shaking basslines by Jiru, that lay the foundation for a relentless onslaught of rhythmic fury. Anchored by a drumming force of Nachet that pounds with unrelenting precision, the band's sonic assault leaves no ear unscathed. The Morning After's music is a symphony of darkness and aggression, crafted with meticulous attention to detail and an unquenchable thirst for sonic exploration, including digital elements as well as glitches and samples. Drawing from a diverse array of metal subgenres, their compositions blend elements of punk, deathcore, easycore, hard rock, etc. Resulting in a sonic tapestry that is both unapologetically brutal and melodic. Their lyrics delve deep into the human condition, tackling themes of anguish, despair, resilience, and the unyielding spirit that emerges from the darkest of trials. On stage, The Morning After transforms into an entity, engulfing the audience in a whirlwind of pure sonic energy. The band's electrifying performances are characterized by their relentless intensity, commanding the crowd to headbang, mosh, and lose themselves in the music. Their stage presence is a mesmerizing fusion of raw power and calculated theatrics, leaving their fans spellbound and hungry for more. As torchbearers of the metal tradition, The Morning After stands as a testament to the genre's enduring spirit. With their uncompromising dedication to their craft, they forge a path that honors the legacy of their influences while pushing the boundaries of what metal can achieve. Each sonic onslaught they unleash is a battle cry, a testament to the unbreakable bond between band and audience, and a reminder that even in the darkest of times, there is solace to be found in the relentless power of music.
+                        h2.text-white-50.mx-auto.mt-1.mb-4 /////////////////////// 
+                        a.btn.btn-primary(href='#projects') Listen to Our Music
 
         // Projects
         section#projects.projects-section.bg-light
             .container.px-4.px-lg-5
-                // Featured Project Row TODO -> spotify IFRAME
                 .row.gx-0.mb-4.mb-lg-5.align-items-center
                     .col-xl-8.col-lg-7
                     .col-xl-4.col-lg-5
@@ -100,14 +89,12 @@ html(lang='en')
                         i.fab.fa-spotify
                     a.mx-2(href='#!')
                         i.fab.fa-apple
-                    a.mx-2(href='#!')
+                    a.mx-2(href='https://www.youtube.com/channel/UCRZpCa-I3b7hI0mRMY9yMxQ')
                         i.fab.fa-youtube
                     a.mx-2(href='https://www.instagram.com/tmabandofficial/')
                         i.fab.fa-instagram
                     a.mx-2(href='mailto:tmabandofficial@gmail.com')
-                        i.fab.fa-tiktok
-                    a.mx-2(href='#!')
-                        i.fab.fa-envelope
+                        i.fa.fa-envelope
 
 
         // Footer
