--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -14,3 +14,10 @@ html {
 body {
     letter-spacing: $base-letter-spacing;
 }
+
+.centered-svg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
+}
