some style changes

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -51,13 +51,12 @@ html(lang='en')
                         a.btn.btn-primary(href='#projects') Listen to Our Music
 
         // Projects
-        section#projects.projects-section.bg-light
-            .container.px-4.px-lg-5
+        section#projects.projects-section
+            .container.px-4.px-lg-5                
                 .row.gx-0.mb-4.mb-lg-5.align-items-center
-                    p.text-black-80.mx-auto.mt-1.mb-4 ////Our Music
+                    p.text-black-80.bg-white.mx-auto.mt-1.mb-4 ////Our Music
                     .col-xl-13.col-lg-10
                     iframe(src="https://www.youtube.com/embed/GCOWid9MahI",width="560", height="600" frameborder="0", allowfullscreen="", allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture", loading="lazy")    
-
 
 
                 .row.gx-0.justify-content-center
