--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -23,13 +23,13 @@ $black: #000;
 $teal: #64a19d;
 $red: #a16468;
 $purple: #7464a1;
-$yellow: #e4c662;
+$yellow: #e6e200;
 $green: #67c29c;
 $cyan: #1cabc4;
 
 // State colors
 
-$primary: $teal;
+$primary: $yellow;
 $secondary: $purple;
 $success: $green;
 $info: $cyan;
