added target blank_ to links at index

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,6 +3,7 @@ html(lang='en')
 
     head
 
+        //Made with ♥ by Jiru(IG:jiru.js)
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
         meta(name='description', content='')
@@ -11,7 +12,6 @@ html(lang='en')
         title The Morning After - Official WebPage 
 
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
-
         // Font Awesome icons (free version)
         script(src='https://use.fontawesome.com/releases/v6.4.0/js/all.js', crossorigin='anonymous')
 
@@ -76,17 +76,17 @@ html(lang='en')
                     .col-md-4.mb-3.mb-md-0
                     p.text-white-50.mx-auto.mt-1.mb-4 ////Contact & Socials                
                 .social.d-flex.justify-content-center 
-                    a.mx-2(href='https://soundcloud.com/tmaband')
+                    a.mx-2(href='https://soundcloud.com/tmaband' target="_blank")
                         i.fab.fa-soundcloud
                     a.mx-2(href='#!')
                         i.fab.fa-spotify
                     a.mx-2(href='#!')
                         i.fab.fa-apple
-                    a.mx-2(href='https://www.youtube.com/channel/UCRZpCa-I3b7hI0mRMY9yMxQ')
+                    a.mx-2(href='https://www.youtube.com/channel/UCRZpCa-I3b7hI0mRMY9yMxQ' target="_blank")
                         i.fab.fa-youtube
-                    a.mx-2(href='https://www.instagram.com/tmabandofficial/')
+                    a.mx-2(href='https://www.instagram.com/tmabandofficial/' target="_blank")
                         i.fab.fa-instagram
-                    a.mx-2(href='https://www.tiktok.com/@tmabandofficial')
+                    a.mx-2(href='https://www.tiktok.com/@tmabandofficial' target="_blank")
                         i.fab.fa-tiktok
                     a.mx-2(href='mailto:tmabandofficial@gmail.com')
                         i.fa.fa-envelope
