--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -35,7 +35,7 @@ html(lang='en')
                     ul.navbar-nav.ms-auto
                         li.nav-item
                             a.nav-link(href='#projects') Releases
-   
+
 
         // Masthead - about
         header.masthead#about
@@ -61,11 +61,17 @@ html(lang='en')
 
                 .row.gx-0.justify-content-center
                     .col-lg-6
-        // Signup
+        // Socials Feed
         section#signup.signup-section
             .container.px-4.px-lg-5
                 .row.gx-4.gx-lg-5
-                    .col-md-10.col-lg-8.mx-auto.text-center
+                    .col-md-10.col-lg-8.mx-auto.text-cente
+                p.text-white-50.mx-auto.mt-1.mb-4 ////Socials Feed
+                p.text-white-50.mx-auto.mt-1.mb-4 ** TWITTER EMBED GENERATOR IS CURRENTLY BROKEN (TY TWITTER :D) **
+                a.twitter-timeline(href="https://twitter.com/TMABandOfficial?ref_src=twsrc%5Etfw") The Morning After Twitter
+                script(async, src="https://platform.twitter.com/widgets.js", charset="utf-8")
+
+
 
         // Contact
 
