--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -57,19 +57,16 @@ html(lang='en')
                     p.text-black-80.bg-white.mx-auto.mt-1.mb-4 ////Our Latest Releases
                     .col-xl-13.col-lg-10
                     iframe(src="https://www.youtube.com/embed/GCOWid9MahI",width="560", height="600" frameborder="0", allowfullscreen="", allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture", loading="lazy")    
-
-
                 .row.gx-0.justify-content-center
                     .col-lg-6
         // Socials Feed
-        section#signup.signup-section
-            .container.px-4.px-lg-5
-                .row.gx-4.gx-lg-5
-                    .col-md-10.col-lg-8.mx-auto.text-cente
-                p.text-white-50.mx-auto.mt-1.mb-4 ////Socials Feed
-                p.text-white-50.mx-auto.mt-1.mb-4 ** TWITTER EMBED GENERATOR IS CURRENTLY BROKEN (TY TWITTER :D) **
-                a.twitter-timeline(href="https://twitter.com/TMABandOfficial?ref_src=twsrc%5Etfw") The Morning After Twitter
-                script(async, src="https://platform.twitter.com/widgets.js", charset="utf-8")
+            // section#signup.signup-section
+                .container.px-4.px-lg-5
+                    .row.gx-4.gx-lg-5
+                        .col-md-10.col-lg-8.mx-auto.text-cente
+                    p.text-white-50.mx-auto.mt-1.mb-4 ////Socials Feed
+                    a.twitter-timeline(href="https://twitter.com/TMABandOfficial?ref_src=twsrc%5Etfw") The Morning After Twitter
+                    script(async, src="https://platform.twitter.com/widgets.js", charset="utf-8")
 
 
 
@@ -84,10 +81,8 @@ html(lang='en')
                 .social.d-flex.justify-content-center 
                     a.mx-2(href='https://soundcloud.com/tmaband' target="_blank")
                         i.fab.fa-soundcloud
-                    a.mx-2(href='#!')
+                    a.mx-2(href='https://open.spotify.com/artist/0w5pi7ybW6NZmW0nQMf5rv?si=hDCP1OB_SD2nVIsRITlh4Q' target="_blank")
                         i.fab.fa-spotify
-                    a.mx-2(href='#!')
-                        i.fab.fa-apple
                     a.mx-2(href='https://www.youtube.com/channel/UCRZpCa-I3b7hI0mRMY9yMxQ' target="_blank")
                         i.fab.fa-youtube
                     a.mx-2(href='https://www.instagram.com/tmabandofficial/' target="_blank")
