--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -60,13 +60,13 @@ html(lang='en')
                 .row.gx-0.justify-content-center
                     .col-lg-6
         // Socials Feed
-            // section#signup.signup-section
+            section#signup.signup-section
                 .container.px-4.px-lg-5
                     .row.gx-4.gx-lg-5
                         .col-md-10.col-lg-8.mx-auto.text-cente
-                    p.text-white-50.mx-auto.mt-1.mb-4 ////Socials Feed
-                    a.twitter-timeline(href="https://twitter.com/TMABandOfficial?ref_src=twsrc%5Etfw") The Morning After Twitter
-                    script(async, src="https://platform.twitter.com/widgets.js", charset="utf-8")
+                        p.text-white-50.mx-auto.mt-1.mb-4 ////Socials Feed
+                        a.twitter-timeline(href="https://twitter.com/TMABandOfficial?ref_src=twsrc%5Etfw") The Morning After Twitter
+                        script(async, src="https://platform.twitter.com/widgets.js", charset="utf-8")
 
 
 
@@ -89,7 +89,7 @@ html(lang='en')
                         i.fab.fa-instagram
                     a.mx-2(href='https://www.tiktok.com/@tmabandofficial' target="_blank")
                         i.fab.fa-tiktok
-                    a.mx-2(href='mailto:tmabandofficial@gmail.com')
+                    a.mx-2(href='mailto:management@tma-band.com')
                         i.fa.fa-envelope
 
 
