--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -59,7 +59,7 @@ html(lang='en')
                     iframe(src="https://www.youtube.com/embed/GCOWid9MahI",width="560", height="600" frameborder="0", allowfullscreen="", allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture", loading="lazy")    
                 .row.gx-0.justify-content-center
                     .col-lg-6
-        // Socials Feed
+        // Socials Feed descartado??
             section#signup.signup-section
                 .container.px-4.px-lg-5
                     .row.gx-4.gx-lg-5
