change youtube player to spotify artist page

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -56,7 +56,7 @@ html(lang='en')
                 .row.gx-0.mb-4.mb-lg-5.align-items-center
                     p.text-black-80.bg-white.mx-auto.mt-1.mb-4 ////Our Latest Releases
                     .col-xl-13.col-lg-10
-                    iframe(src="https://www.youtube.com/embed/GCOWid9MahI",width="560", height="600" frameborder="0", allowfullscreen="", allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture", loading="lazy")    
+                    iframe(style="border-radius: 12px", src="https://open.spotify.com/embed/artist/0w5pi7ybW6NZmW0nQMf5rv?utm_source=generator", width="100%", height="500", frameBorder="0", allowfullscreen="", allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture", loading="lazy")    
                 .row.gx-0.justify-content-center
                     .col-lg-6
         // Socials Feed descartado??
